--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "gulp-sass": "^6.0.0",
+    "sass-loader": "^16.0.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "sass": "^1.81.0",
+    "sass": "^1.81.1",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
