--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.7.9",
     "gulp-sass": "^6.0.0",
     "sass-loader": "^16.0.3",
     "vue": "^3.5.12",
