--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "gulp-sass": "^6.0.0",
     "qs": "^6.13.1",
     "sass-loader": "^16.0.3",
@@ -18,7 +19,8 @@
     "vue-router": "^4.4.5",
     "vue3-cookies": "^1.0.6",
     "vuetify": "^3.7.4",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
